--- a/1909.03697/1909.03697-work.tex
+++ b/1909.03697/1909.03697-work.tex
@@ -125,7 +125,7 @@ Classical physics is generally regarded as deterministic, as opposed to quantum 
 \section{Why is classical physics (in)deterministic?}
 It is generally accepted that classical physics (i.e., Newton's mechanics and Maxwell's electrodynamics) is \emph{deterministic}. Restating a famous argument due to Laplace (known as Laplace's demon), determinism is usually assumed to be the ``view that a sufficient knowledge of the laws of nature and appropriate boundary conditions will enable a superior intelligence to predict the future states of the physical world and to retrodict its past states with infinite precision'' \cite{determinism}.
 
-Yet, stimulated by the development of statistical physics (which is taken to introduce indeterminacy as merely epistemic), one could find notable exceptions to this deterministic view, remarkably in the works of preeminent physicists the likes of L. Boltzmann, F. Exner, E. Schr{\"o}dinger and M. Born, who --admittedly with different standpoints-- all argued for genuine indeterminism in classical physics (see \cite{delsanto} and references thereof). These doubts about classical determinism were fostered in the second half of the twentieth century, after the theory of chaotic systems was systematically developed and its implications fully understood \cite{ornstein, prigogine}.
+Yet, stimulated by the development of statistical physics (which is taken to introduce indeterminacy as merely epistemic), one could find notable exceptions to this deterministic view, remarkably in the works of preeminent physicists the likes of L. Boltzmann, F. Exner, E. Schr{\"o}dinger and M. Born, who---admittedly with different standpoints---all argued for genuine indeterminism in classical physics (see \cite{delsanto} and references thereof). These doubts about classical determinism were fostered in the second half of the twentieth century, after the theory of chaotic systems was systematically developed and its implications fully understood \cite{ornstein, prigogine}.
 
 However, it is only in recent years that new life has been breathed into the critique of determinism in classical physics, showing that the advocacy of determinism leads to severe conceptual difficulties based on information-theoretic arguments \cite{dowek, gisin1, blundell}, and that determinism might even be incompatible with the derivation of the second law of thermodynamics \cite{drossel}. In fact, the hypothetical ``superior intelligence'' (demon), supposedly able to perfectly predict the future, is required to have complete information about the state of the universe and then use it to compute the subsequent evolution. Recent developments of information theory and its application to physics (mainly blossomed within the frameworks of quantum information and quantum thermodynamics) led to the conclusion that the abstract, mathematically well-formalized concept of information acquires a meaningful value in the natural sciences only if the information is embodied into a physical system (encoding), allowing it to be manipulated (computation) and transmitted (communication). As such, these processes are subject to the same limitations imposed by the laws of physics (\emph{Landauer's principle} \cite{landauer}). In the face of this, Laplace's demon, and hence determinism, leads to two categories of problems: the problem of \emph{infinities} and the problem of \emph{infinitesimals}.\footnote{Similar problems have  been recently discussed in a more general context and without resort to information-theoretic arguments in Ref. \cite{ellisinf}.}
 
@@ -133,17 +133,17 @@ The former of these problems is directly related to the memory capability of the
 
 The problem of infinitesimals, instead, is related to the question of whether it would be possible to know, even in principle, the necessary boundary conditions with infinite precision.\footnote{In what follows, boundary and initial conditions will be used interchangeably, for they are conceptually the same in our discussion. In fact, they both serve as necessary inputs to the (differential) dynamical equations in order to give predictions. Thus, if either of the initial or the boundary conditions are not determined with infinite precision, they affect the subsequent dynamics in the same way.} Moreover, do these infinite-precision conditions (i.e., with infinite predetermined digits) exist at all?  As Drossel pointed out, this is related to the problem of determinism in so far as the  ``idea of a deterministic time evolution represented by a trajectory in phase space can only be upheld within the framework of classical mechanics if a point in phase space has infinite precision'' \cite{drossel}. To address the problem of infinitesimals, and in doing so challenging determinism both at the epistemic and ontic levels, one can again use an argument that relates information and physics, namely the fact that finite volumes can contain only a finite amount of information (\emph{Bekenstein bound}, see \cite{gisin1}).
 
-In this respect, one should realize that classical physics is not inherently deterministic just because its formalism is a set of deterministic functions (differential equations), but rather its alleged deterministic character is based on the metaphysical, unwarranted assumption of ``infinite precision''. Such a hidden assumption can be formulated as a principle  --tacitly assumed in classical physics-- which consists of two different aspects:
+In this respect, one should realize that classical physics is not inherently deterministic just because its formalism is a set of deterministic functions (differential equations), but rather its alleged deterministic character is based on the metaphysical, unwarranted assumption of ``infinite precision''. Such a hidden assumption can be formulated as a principle ---tacitly assumed in classical physics---which consists of two different aspects:
 
 \textbf{\emph{Principle of infinite precision}}:\\
-1. (Ontological) -- there exists an actual value of every physical quantity, with its infinite determined digits (in any arbitrary numerical base).\\
-2. (Epistemological) -- despite it might not be possible to know all the digits of a physical quantity (through measurements), it is possible to know an arbitrarily large number of digits. 
+1. (Ontological)---there exists an actual value of every physical quantity, with its infinite determined digits (in any arbitrary numerical base).\\
+2. (Epistemological)---despite it might not be possible to know all the digits of a physical quantity (through measurements), it is possible to know an arbitrarily large number of digits. 
 
-In this paper, we further develop the argument put forward in Ref.\cite{gisin1}, wherein it has been outlined a concrete possibility to replace the \emph{principle of infinite precision}. According to this view, the limits of this principle rely on the faulty assumption of granting a physical significance to mathematical real numbers. We would like to stress that such an assumption cannot be whatsoever justified at the operational level, as already stressed by Born, as early as 1955: ``Statements like `a quantity x has a completely definite value' (expressed by a real number and represented by a point in the mathematical continuum) seem to me to have no physical meaning" \cite{born}. Relaxing the assumption of the physical significance of mathematical real numbers, allows one to regard classical physics as a fundamentally indeterministic theory, contrarily to its standard formulation. The latter can be considered, in this view, a deterministic completion in terms of (tacitly) posited \emph{hidden variables}. This situation resembles (without however being completely analogous) the contraposition between the standard formulation of quantum mechanics --which considers indeterminism an irrefutable part of quantum theory-- and Bohm's \cite{bohm} or Gudder's \cite{gudder} hidden variable models, which provide a deterministic description of quantum phenomena --adding in principle inaccessible supplementary variables.
+In this paper, we further develop the argument put forward in Ref.\cite{gisin1}, wherein it has been outlined a concrete possibility to replace the \emph{principle of infinite precision}. According to this view, the limits of this principle rely on the faulty assumption of granting a physical significance to mathematical real numbers. We would like to stress that such an assumption cannot be whatsoever justified at the operational level, as already stressed by Born, as early as 1955: ``Statements like `a quantity x has a completely definite value' (expressed by a real number and represented by a point in the mathematical continuum) seem to me to have no physical meaning" \cite{born}. Relaxing the assumption of the physical significance of mathematical real numbers, allows one to regard classical physics as a fundamentally indeterministic theory, contrarily to its standard formulation. The latter can be considered, in this view, a deterministic completion in terms of (tacitly) posited \emph{hidden variables}. This situation resembles (without however being completely analogous) the contraposition between the standard formulation of quantum mechanics---which considers indeterminism an irrefutable part of quantum theory---and Bohm's \cite{bohm} or Gudder's \cite{gudder} hidden variable models, which provide a deterministic description of quantum phenomena---adding in principle inaccessible supplementary variables.
 
-Before further discussing, in what follows, the arguments for alternative interpretations of classical physics without real numbers --and the issues that this can cause-- some general remarks on indeterminism seem due. It appears, in fact, that a common misconception concerning physical indeterminism, is that --in the eyes of some physicists and philosophers-- this is taken to imply that any kind of regularity or predictive power looks unwarranted --the supporter of determinism would ask: how can you explain the incredible predictive success of our laws of physics without causal determinism? Yet, an indeterministic description of the world does not (at least necessarily) entail a ``lawless indeterminism'', namely a complete disorder devoid of \emph{any} laws or regularities (quantum mechanics with its probabilistic predictions provides a prime example of these indeterministic regularities). We would like to define indeterminism trough the sufficient condition of the existence of \emph{some} events that are not fully determined by their past states; in the words of K. Popper, ``indeterminism merely asserts that there exists at least one event (or perhaps, one kind of events [...]) which is not predetermined'' \cite{popper50}. Such a remark is important because, historically, classical mechanics allowed to predict with a tremendous precision the motion, for instance, of the planets in the Solar System and this led Laplace to formulate his ideas on determinism, which became the standard view among physicists and remained for a long time unchallenged. In fact, thinking that physics is deterministic seems completely legit, in so far as certain physical systems exhibit extremely stable dynamics --e.g. an harmonic oscillator (pendulum), or the (Newtonian) gravitational two-body problem, and in general any integrable systems.  However, this justification of determinism can be challenged on the basis of two considerations. On the one hand, as already remarked, the existence of \emph{some} very stable systems (for all practical purposes treated as deterministic) does not undermine the possibility of indeterminism in the natural world. On the other hand, in the last one century a systematic study of chaotic systems --which are not integrable-- has been carried out, giving us good reasons to doubt determinism. Indeed, chaotic systems are not stable under perturbations, meaning that an arbitrarily small change in the initial conditions would lead to a significantly different future behavior, thus making the principle of infinite precision even more operationally unjustified, and therefore representing a concrete challenge to determinism.\footnote{Sometimes a distinction is made between strong and weak determinism. The former can be intuitively defined as ``\emph{similar} initial conditions lead to \emph{similar} trajectories’ and it is fulfilled by any integrable system. On the other hand, weak determinism can be defined as ``\emph{identical} conditions lead to \emph{identical} trajectories’. This holds for classical chaotic systems, however it is not empirically testable, for it would require the knowledge of the initial conditions with infinite precision.}
+Before further discussing, in what follows, the arguments for alternative interpretations of classical physics without real numbers seem due. It appears, in fact, that a common misconception concerning physical indeterminism is that in the eyes of some physicists and philosophers, it is taken to imply that any kind of regularity or predictive power looks unwarranted. The supporter of determinism would ask: how can you explain the incredible predictive success of our laws of physics without causal determinism? Yet, an indeterministic description of the world does not (at least necessarily) entail a ``lawless indeterminism'', namely a complete disorder devoid of \emph{any} laws or regularities (quantum mechanics with its probabilistic predictions provides a prime example of these indeterministic regularities). We would like to define indeterminism trough the sufficient condition of the existence of \emph{some} events that are not fully determined by their past states; in the words of K. Popper, ``indeterminism merely asserts that there exists at least one event (or perhaps, one kind of events [...]) which is not predetermined'' \cite{popper50}. Such a remark is important because, historically, classical mechanics allowed to predict with a tremendous precision the motion, for instance, of the planets in the Solar System and this led Laplace to formulate his ideas on determinism, which became the standard view among physicists and remained for a long time unchallenged. In fact, thinking that physics is deterministic seems completely legit, in so far as certain physical systems exhibit extremely stable dynamics---e.g. an harmonic oscillator (pendulum), or the (Newtonian) gravitational two-body problem, and in general any integrable systems.  However, this justification of determinism can be challenged on the basis of two considerations. On the one hand, as already remarked, the existence of \emph{some} very stable systems (for all practical purposes treated as deterministic) does not undermine the possibility of indeterminism in the natural world. On the other hand, in the last century a systematic study of chaotic systems (which are not integrable) has been carried out, giving us good reasons to doubt determinism. Indeed, chaotic systems are not stable under perturbations, meaning that an arbitrarily small change in the initial conditions would lead to a significantly different future behavior, thus making the principle of infinite precision even more operationally unjustified, and therefore representing a concrete challenge to determinism.\footnote{Sometimes a distinction is made between strong and weak determinism. The former can be intuitively defined as ``\emph{similar} initial conditions lead to \emph{similar} trajectories’ and it is fulfilled by any integrable system. On the other hand, weak determinism can be defined as ``\emph{identical} conditions lead to \emph{identical} trajectories’. This holds for classical chaotic systems, however it is not empirically testable, for it would require the knowledge of the initial conditions with infinite precision.}
 
-Incidentally, it is interesting to stress that, in the context of quantum physics, Bell's inequalities \cite{bell} have given us good reasons to believe, if not directly in indeterminism --which indeed cannot be confirmed or disproved within the domain of science (see further)-- that having at least one not predetermined event in the history of the Universe could have tremendous consequences on the following evolution. In fact, an experimental violation of Bell’s inequalities guarantees that if the inputs (measurement settings) were independent of the physical state shared by two distant parties, then the outcomes would be genuinely random (i.e., they cannot have predetermined values). Yet, the amount of random numbers generated in a Bell's test can be greater than the number of the corresponding inputs (in terms of bits of information): Bell's tests performed on quantum entangled states can be thought of as “machines” to increase the amount of randomness in the Universe (see also \cite{gisin2010}). Surprisingly enough, recent results \cite{renner, putz} showed that it is not even necessary to have a single genuinely random bit from the outset, but it is sufficient to introduce an arbitrarily small amount of initial randomness (i.e., of measurement independence) to generate virtually unbounded randomness. Hence, if one single event in the past history of the Universe was not fully causally determined beforehand, there is an operationally well defined procedure that allows to arbitrarily multiply the amount of indeterministic events in the future. Namely, it would be enough to use the randomness of the one indeterminate event as input in a Bell's test to extract more randomness (through the violation of a Bell's inequality). The random outputs can be used as new inputs for more Bell's experiments, and the process can be repeated arbitrarily many times \cite{amplification}. However, the initial arbitrarily small amount of randomness (or of indeterministic events) cannot be demonstrated by physics and its justification can only come from metaphysical arguments (see \cite{suppes}).
+Incidentally, it is interesting to stress that, in the context of quantum physics, Bell's inequalities \cite{bell} have given us good reasons to believe, if not directly in indeterminism---which indeed cannot be confirmed or disproved within the domain of science (see further)---that having at least one not predetermined event in the history of the Universe could have tremendous consequences on the following evolution. In fact, an experimental violation of Bell’s inequalities guarantees that if the inputs (measurement settings) were independent of the physical state shared by two distant parties, then the outcomes would be genuinely random (i.e., they cannot have predetermined values). Yet, the amount of random numbers generated in a Bell's test can be greater than the number of the corresponding inputs (in terms of bits of information): Bell's tests performed on quantum entangled states can be thought of as “machines” to increase the amount of randomness in the Universe (see also \cite{gisin2010}). Surprisingly enough, recent results \cite{renner, putz} showed that it is not even necessary to have a single genuinely random bit from the outset, but it is sufficient to introduce an arbitrarily small amount of initial randomness (i.e., of measurement independence) to generate virtually unbounded randomness. Hence, if one single event in the past history of the Universe was not fully causally determined beforehand, there is an operationally well defined procedure that allows to arbitrarily multiply the amount of indeterministic events in the future. Namely, it would be enough to use the randomness of the one indeterminate event as input in a Bell's test to extract more randomness (through the violation of a Bell's inequality). The random outputs can be used as new inputs for more Bell's experiments, and the process can be repeated arbitrarily many times \cite{amplification}. However, the initial arbitrarily small amount of randomness (or of indeterministic events) cannot be demonstrated by physics and its justification can only come from metaphysical arguments (see \cite{suppes}).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -154,8 +154,7 @@ Before proposing some possible models of indeterministic classical physics, in t
 
 \textbf{1.} \emph{The laws of motions are fundamentally stochastic}. In this case, however, we cannot speak of an interpretation of the theory, but an actual modification of the formalism is required. In fact, in this case not only chaotic systems but also integrable ones would exhibit noisy outcomes, leading to experimentally inequivalent predictions. This case is the analogue of spontaneous collapse theories in quantum mechanics \cite{grw, gisincollapse, belljumps, cls}, which modify the Schr{\"o}dinger's equation with additional non-unitary terms.
 
-\textbf{2.} \emph{The IC cannot, in principle, be fully known}. Without any ontological commitments, one can take seriously the epistemological statements of the \emph{principle of infinite precision} and push it to the extreme, namely asserting that there are in principle limits to the possibility of knowing (or measuring) certain quantities. This is what is entailed by the standard interpretation of the Heisenberg uncertainty principle that is usually stated as: there is in quantum physics a fundamental limit to the precision with which canonically conjugated variables \emph{can be known}.  Such an uncertainty can be introduced in classical physics as well, and would be characterized by a new natural constant $\epsilon$ (e.g., the standard deviation of a Gaussian function centered in the considered point). This would set an epistemic (yet fundamental) limit of precision, with which physical variables could be determined, as a classical analogue of  Heisenberg's uncertainty relations in quantum theory. This viewpoint appears similar to the one proposed in Ref. \cite{drossel}. Notice, however, that since this approach is agnostic with respect to the underlying ontology, it is fully compatible with a realist position that takes this uncertainty as being an ontological indeterminacy.
-\footnote{As a supporting argument for this fundamental epistemic limit, one can even think in terms of theoretical reduction (i.e. when a theory is supervened by a more fundamental one, of which it represent an approximation). In fact, determining positions in classical physics with higher and higher precision, means to access digits that are relevant at the microscopic scale, and thus the Heisenberg's indeterminacy relations need to be applied (leading to the identification $\epsilon=\hbar$). However, it ought to be remarked that in certain classical chaotic systems the digits that are to become relevant are not necessarily the ones in the microscopic domain, but could be those which will become relevant only after a longer time} (such as in weather forecasts). So more general arguments than theoretical reduction would be desirable.
+\textbf{2.} \emph{The IC cannot, in principle, be fully known}. Without any ontological commitments, one can take seriously the epistemological statements of the \emph{principle of infinite precision} and push it to the extreme, namely asserting that there are in principle limits to the possibility of knowing (or measuring) certain quantities. This is what is entailed by the standard interpretation of the Heisenberg uncertainty principle that is usually stated as: there is in quantum physics a fundamental limit to the precision with which canonically conjugated variables \emph{can be known}.  Such an uncertainty can be introduced in classical physics as well, and would be characterized by a new natural constant $\epsilon$ (e.g., the standard deviation of a Gaussian function centered in the considered point). This would set an epistemic (yet fundamental) limit of precision, with which physical variables could be determined, as a classical analogue of  Heisenberg's uncertainty relations in quantum theory. This viewpoint appears similar to the one proposed in Ref. \cite{drossel}. Notice, however, that since this approach is agnostic with respect to the underlying ontology, it is fully compatible with a realist position that takes this uncertainty as being an ontological indeterminacy.\footnote{As a supporting argument for this fundamental epistemic limit, one can even think in terms of theoretical reduction (i.e. when a theory is supervened by a more fundamental one, of which it represent an approximation). In fact, determining positions in classical physics with higher and higher precision, means to access digits that are relevant at the microscopic scale, and thus the Heisenberg's indeterminacy relations need to be applied (leading to the identification $\epsilon=\hbar$). However, it ought to be remarked that in certain classical chaotic systems the digits that are to become relevant are not necessarily the ones in the microscopic domain, but could be those which will become relevant only after a longer time} (such as in weather forecasts). So more general arguments than theoretical reduction would be desirable.
 
 \textbf{3.} \emph{The IC \emph{are} not fully determined}. One can think that the fundamental limit of precision in determining physical quantities is not merely epistemic, but actually is an objective, ontologic indeterminacy that depends on the system and its interactions at a certain time. This view is the one that will be pursued in what follows, when we will propose ways to remove real numbers $\R$ from the domain of physics. Although this case does not seem to be the analogue of any specific interpretation of quantum theory, it clearly goes in the direction of realistic interpretations. It ought to be stressed, however, that if the initial conditions are not fully determined, this even makes (quantum) Bohmian mechanics becoming indeterministic. 
 
@@ -185,7 +184,7 @@ Developing further the proposal in \cite{gisin1}, we put forward an alternative 
 %
 where each $\gamma_j\in\{0,1\}$, $\forall j\in \N^+$. This means that, being $\gamma \in \R$, its infinite bits are \emph{all} given at once and each one of them takes as a value either 0 or 1. 
 
-In an indeterministic world, however, not all the digits should be determined at all times, yet we require this model to give the same empirical predictions of the standard one. We therefore require a physical quantity to have the first (more significant) $N$ digits fully determined --and to be the same as those that give the standard deterministic predictions-- at time $t$, and we write $\gamma(N(t))$, whereas the following infinite digits are not yet determined. This reads:
+In an indeterministic world, however, not all the digits should be determined at all times, yet we require this model to give the same empirical predictions of the standard one. We therefore require a physical quantity to have the first (more significant) $N$ digits fully determined---and to be the same as those that give the standard deterministic predictions---at time $t$, and we write $\gamma(N(t))$, whereas the following infinite digits are not yet determined. This reads:
 %
 \begin{equation*}
 \gamma \left(N(t)\right)=0.\gamma_1\gamma_2\cdots \gamma_{N(t)} ?_{N(t)+1}\cdots ?_k\cdots,
@@ -205,7 +204,7 @@ There exist (in the sense of  being ontologically real) physical properties that
 
 As a function of time, propensities must undergo a dynamical evolution. We envision more than a way to evolve propensities in time, although we do not propose an explicit model to describe this. On the one hand, one can think of a dynamical process similar to spontaneous collapse models of quantum mechanics. Admittedly, spontaneous collapse models require to modify the fundamental dynamical equation of quantum physics, the Schr{\"o}dinger's equation. Hence these models are not merely interpretations, but testable different theories. Nevertheless, for propensity this is not necessarily the case because they are a postulated element of reality which is however not observable. Thus, even if it would be desirable to have an explicit form for the equations governing the dynamics of propensities, the measured values of physical (observable) quantities would evolve in the usual way. Thus we maintain that our proposed new interpretation is indeed an interpretation and not a different testable theory.
 
-On the other hand, intuitionistic mathematics could be the tool to solve the issue of the evolution of propensities (see ``choice sequences'' below). In fact, one can start from an infinite sequence of completely random bits (or digits), and then the number representing a physical quantity evolves according to a law (a function of these random bits). However, despite this law would describe the evolution of propensities, it is different from a standard a physical law, for it is a different way to construct mathematical numbers --which in turn describe physical quantities-- in time.
+On the other hand, intuitionistic mathematics could be the tool to solve the issue of the evolution of propensities (see ``choice sequences'' below). In fact, one can start from an infinite sequence of completely random bits (or digits), and then the number representing a physical quantity evolves according to a law (a function of these random bits). However, despite this law would describe the evolution of propensities, it is different from a standard a physical law, for it is a different way to construct mathematical numbers---which in turn describe physical quantities---in time.
 
 Making use of propensities, we can now refine our definition of physical quantities:
 
@@ -267,13 +266,13 @@ At this point one should ask oneself whether there are examples of emergence tha
 \section{Top-down causation}
 The idea of strong emergence, including emergent determinism, is related to the concept of ``top-down causation'' \cite{topdown, topdown2}. In this view, microphysicalism is not necessarily rejected ontologically (i.e., it admits that complex structures are hierarchical modular compositions of simpler ones), but the fact that the behavior of macroscopic events is fully determined by the interactions of the macroscopic entities is revised.  Top-down causation maintains that the interactions between microscopic entities do not causally supervene the macroscopic phenomena, but rather it posits a mutual interaction where also the macroscopic (strongly emergent) laws impose constraints on the behavior of their constituents. Note that top-down causation requires indeterminism (at least at the lower level of the constituents) to be in principle conceivable \cite{drosselnew}; this was already remarked by Popper, when stating: ``{[A] higher level may exert a dominant influence upon a lower level}. For it seems that, were the universe \emph{per impossibile} a perfect determinist clockwork, there would be no heat production and no layers and therefore no such dominating influence would occur. This suggests that the emergence of hierarchical levels or layers, and of an interaction between them, depends upon a fundamental indeterminism of the physical universe. Each level is open to causal influences coming from lower and from higher levels'' \cite{poppernew}.
 
-Concerning indeterministic interpretations of physical theories, top-down causation could help to understand how the determination of dynamical variables (i.e., the actualization of their values) occurs in the context of indeterministic theories. Namely, the reason why --and under what circumstances-- a single definite value is realized among all the possible ones. In the FIQ-based indeterministic interpretation of classical physics here introduced, this translates into the understanding of how the bits of physical variables becomes fully determined, namely how their propensities become either 0 or 1. We envision two possible mechanisms that could explain the actualization of the variables:
+Concerning indeterministic interpretations of physical theories, top-down causation could help to understand how the determination of dynamical variables (i.e., the actualization of their values) occurs in the context of indeterministic theories. Namely, the reason why---and under what circumstances---a single definite value is realized among all the possible ones. In the FIQ-based indeterministic interpretation of classical physics here introduced, this translates into the understanding of how the bits of physical variables becomes fully determined, namely how their propensities become either 0 or 1. We envision two possible mechanisms that could explain the actualization of the variables:
 
 \textit{1. The actualizations happens spontaneously as time passes}. This view is compatible with reductionism and it does not necessarily require any effects of top-down causation. Note that this mechanism resembles, in the context of quantum mechanics, objective collapse models such as the ``continuous spontaneous localization'' (CSL) \cite{gisincollapse, cls}. 
 
 \textit{2. The actualization happens when a higher level requires it}. This means that when a higher level of description (e.g., the macroscopic measurement apparatus) requires some physical quantity pertaining to the lower-level description to acquire a determined value, then the lower level must get determined. In quantum mechanics a similar explanation is provided by the Copenhagen interpretation and, more explicitly, by the model in Ref. \cite{topdown2}.
 
-In fact, the latter mechanisms are strongly related to what has been discussed at length in the context of quantum theory, namely the long-standing ``quantum measurement problem''. This comprises the problem of ``explaining why a certain outcome --as opposed to its alternatives-- occurs in a particular run of an experiment'' \cite{brukner}. In fact, some of the most commonly accepted interpretations of quantum mechanics (e.g. the Copenhagen interpretation) uphold the view that it is the act of measurement to impose to microscopic (quantum) objects to actualize one determined value, out of the possible ones.
+In fact, the latter mechanisms are strongly related to what has been discussed at length in the context of quantum theory, namely the long-standing ``quantum measurement problem''. This comprises the problem of ``explaining why a certain outcome---as opposed to its alternatives---occurs in a particular run of an experiment'' \cite{brukner}. In fact, some of the most commonly accepted interpretations of quantum mechanics (e.g. the Copenhagen interpretation) uphold the view that it is the act of measurement to impose to microscopic (quantum) objects to actualize one determined value, out of the possible ones.
 
 Note that, despite it has been already remarked in the literature that every indeterministic theory has to deal with a ``measurement problem'' (see e.g. \cite{brukner}), it seems that there has hardly been any consideration of this issue in the context of other indeterministic theories than quantum mechanics. In the next subsection we will discuss what we call, by analogy, the ``classical measurement problem'. We will then draw a connection with top-down causation, and show how this could help to shed light on this problem.
 
@@ -292,7 +291,7 @@ As a matter of fact, the ``classical measurement problem'' here introduced remai
 
 \section{Conclusions}
 
-We have discussed arguments --primarily based on the modern application of information theory to the foundations of physics-- against the standard view that classical physics is necessarily deterministic. We have also discussed concrete perspectives to reinterpret classical physics in an indeterministic fashion. We have then compared our indeterministic proposals with some interpretations of quantum physics. However, it seems clear that the empirical results of both classical and quantum mechanics can fit in either a deterministic or indeterministic framework. Furthermore, there are compelling arguments (see e.g., \cite{gisin1, suppes, wendl}) to support the view that the same conclusion can be reached for any given physical theory --a trivial way to make an indeterministic theory fully determined is to ``complete" the theory with all the results of every possible experiments that can be performed.
+We have discussed arguments---primarily based on the modern application of information theory to the foundations of physics---against the standard view that classical physics is necessarily deterministic. We have also discussed concrete perspectives to reinterpret classical physics in an indeterministic fashion. We have then compared our indeterministic proposals with some interpretations of quantum physics. However, it seems clear that the empirical results of both classical and quantum mechanics can fit in either a deterministic or indeterministic framework. Furthermore, there are compelling arguments (see e.g., \cite{gisin1, suppes, wendl}) to support the view that the same conclusion can be reached for any given physical theory---a trivial way to make an indeterministic theory fully determined is to ``complete" the theory with all the results of every possible experiments that can be performed.
 
 In conclusion, although the problem of determinism versus indeterminism is in our opinion central to science, the hope to resolve this problem within science itself has faded, and this is ultimately to be decided on the basis of metaphysical arguments.
 
